--- a/html/styles.css
+++ b/html/styles.css
@@ -3,11 +3,11 @@ body{
 }
 
 div1{
-    margin-left: 100;
+    margin-left: 250;
 }
 p{
     background-color:rgb(rgb(255, 136, 136));
-    color: black;
+    color: blue;
     font-family: 'Times New Roman', Times, serif;
 }
 
