--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 
-<html>
-    <!-- Ensures utf-8 chars can be used and devices are supported -->
-    <meta charset = "utf-8">
-    <meta name = "viewport" content = "width=device-width"/>
-    
+<html>  
     <!--Change this tab label later-->
     <head>
+        <meta charset = "utf-8">
+        <meta name = "viewport" content = "width=device-width"/>
         Real Estate Site
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -26,24 +24,8 @@
         <p>
             Find the best location!
         </p>
-        
-        <form> <!--action="Add the .js URL here?"" -->
-            <!-- Location, distance (radius), Budget (howmuch you got), price (Willing to spend)-->
-            <label for="Location"></label> Enter Location: </label><br>
-            <input type="text" id="Location" name="Location"><br><br>
-            <label for="distance">  Enter Radius From Location: </label><br>
-            <input type="number" id="distance" name="distance"> <br><br>
-        
-            <label for="Budget">  Enter Your Current Budget: </label><br>
-            <input type="number" id="Budget" name="Budget"> <br><br>
 
-            <label for="Price">  Enter Your Desired Price: </label><br>
-            <input type="number" id="Price" name="Price"> <br><br>
-
-            <input type="submit" value = "Submit"> <br><br><!--Origionally a "submit type"-->
-        </form> <br> <br> <br>
-
-
+        <a href="/input"> Go to the Input Form<a>
     </body>
 
 
